tests/baselines/reference/letDeclarations-useBeforeDefinition2.errors.txt
tests/cases/compiler/file1.ts(1,1): error TS2448: Block-scoped variable 'l' used before its declaration.


==== tests/cases/compiler/file1.ts (1 errors) ====
    l;
    ~
!!! error TS2448: Block-scoped variable 'l' used before its declaration.
!!! related TS2728 tests/cases/compiler/file2.ts:1:7: 'l' is declared here.
    
==== tests/cases/compiler/file2.ts (0 errors) ====
    const l = 0;